css/style.css
/* ... */
button#mobileNavBtn:hover {
	background-color: #222;
}

button#mobileNavBtn:hover > svg > path.bar {
	fill: #ffffff;
}

.menu-bar {
	fill: green;
	height: 10px;
}

#mobileNav > nav {
	display: none;
	position: absolute;
	z-index: 10;
	width: 100%;
	top: 3em;
	background-color: #222;
	box-shadow: .5em .5em .5em rgba(0, 0, 0, .5);
}

#mobileNav > nav > ul > li {
	padding: .6em;
}

#mobileNav > nav > ul > li:first-of-type {
	padding-top: 1.2em;
}

#mobileNav > nav > ul > li > a {
	color: #FCFCF8;
	display: block;
	border-bottom: .1em solid #FCFCF8;
}

#mobileNav > nav > ul > li > a:hover {
	text-shadow: .05em .05em #224F3B;
	text-decoration: none;
	font-size: 1.1em;
}

/* ------------------  Content Elements ------------------------------  */
#contentSection {
	width: 100%;
	overflow: hidden;
}

div.row {
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: wrap;
	flex-flow: wrap;
	-webkit-align-content: flex-start;
	align-content: flex-start;
	-webkit-justify-content: flex-start;
	justify-content: flex-start;
}

div#contentSection > section {
	height: 100%;
	display: none;
	position: relative;
	z-index: 3;
	top: -10%;
	left: 0;
	transition: 1.5s ease;
	width: 70%;
	border-radius: 2px;
	margin: 3em auto 6em;
	background-color: rgba(252, 252, 248, 0.96);
	box-shadow: 2px 2px 10px rgba(0, 0, 0, .5);
}

#contentSection > section#homePageContent.show,
#contentSection > section#aboutPageContent.show,
#contentSection > section#companyPageContent.show,
#contentSection > section#contactPageContent.show {
	transition: 1.5s ease;
	top: 10%;
	display: block;
	transition: .2s ease;
}

#homePageContent,
#aboutPageContent,
#companyPageContent {
	min-height: 450px;
}

#contactPageContent {
	min-height: 550px;
	padding-bottom: 1em;
}

#homePageContent p:last-child {
	padding: 2em;
}

/* -------------------- ABOUT PAGE ------------------------------------------ */

section#aboutPageContent .profileBox {
    width: 23%;
    max-height: 14em;
    max-width: 27%;
    color: #fff;
    margin: 2em;
    overflow: hidden;
    position: relative;
    z-index: 3;
		float: left;
}

section#aboutPageContent .profileBox div.employeeDetails {
	position: relative;
	top: -1.7em;
	padding: .3em;
	box-sizing: border-box;
	background-color: rgba(0, 0, 0, .5);
	-webkit-transition: .5s ease-in-out;
	-moz-transition: .5s ease-in-out;
	transition: .5s ease-in-out;
}

section#aboutPageContent .profileBox:hover div.employeeDetails {
	top: -2.8em;
}

section#aboutPageContent .profileBox div.employeeDetails p {
	padding: 0;
}

section#aboutPageContent figure.portrait {
	background-color: goldenrod;
	background-size: cover;
	background-position: center;
	height: 14em;
	width: 100%;
}

section#aboutPageContent figure.portrait.erik {
	background-image: url("../img/erik.jpg");
}

section#aboutPageContent figure.portrait.default {
	background-image: url("../img/default-user.png");
}

section#aboutPageContent > .page-wrap > div.row > p {
	width: 60%;
	padding: 2em .2em;
}

section#aboutPageContent > .page-wrap > div.row > span.row-separator {
	width: 92%;
	border: 1px solid #999;
	display: block;
	margin: 0 auto;
}

section#aboutPageContent > .page-wrap > div.row:last-child span.row-separator {
	border: none;
}

section#aboutPageContent > .page-wrap > div.row:last-child > p > a {
	background-color: goldenrod;
	border-radius: 2px;
	display: block;
	text-align: center;
	padding: 1.5em;
	width: 5em;
	margin: 3em auto 0;
	-webkit-transition: .3s ease-in-out;
	-moz-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}

section#aboutPageContent > .page-wrap > div.row:last-child > p > a:hover {
	background: gold;
}

/* ------------------  Company Page ----------------------------------- */
section#companyProfile > article ul {
	padding-left: 3em;
}

section#companyProfile > article p:last-child {
	padding: .2em 2em 2em;
}

section#companyProfile > article ul {
	width: 100%;
}

/* ------------------  Contact Container ---------------------------------- */
#contactContainer {
	width: 100%;
	position: absolute;
	z-index: 2;
	top: 0;
	left: 0;
}

#contact-form input[type="text"],
#contact-form input[type="email"],
#contact-form textarea {
	width: 100%;
	border-radius: 3px;
	font-size: 1em;
	border: 1px solid #999;
	padding: .1em;
}

#contact-form textarea {
	min-height: 5em;
}

#contact-form input[type="text"]:focus,
#contact-form input[type="text"]:active,
#contact-form input[type="email"]:focus,
#contact-form input[type="email"]:active,
#contact-form textarea:focus,
#contact-form textarea:active {
	outline: none;
}

#contact-form input.ng-invalid-required.ng-dirty { background-color: lightpink; }
#contact-form input.ng-invalid-email.ng-dirty { background-color: #F3F0BF; }
#contact-form input.ng-valid.ng-dirty { background-color: #C1F0BF; }

button#closeContainer {
	background-color: inherit;
	color: #999;
}

button#closeContainer,
button#send {
	font-size: 1.2em;
	margin: .5em;
}

button#closeContainer {
	cursor: pointer;
}

button#closeContainer:hover {
	color: #333;
}

button#send {
	padding: .3em .5em;
	margin-left: 0;
	background-color: #377F5E;
	color: #fff;
	border: none;
	cursor: pointer;
	-webkit-transition: .3s ease-in-out;
	-moz-transition: .3s ease-in-out;
	transition: .3s ease-in-out;
}

button#send[disabled="disabled"] {
	cursor: default;
	background-color: #98BDA0;
	color: #333;
}

#contactPageContent div.formError {
	color: maroon;
	font-weight: bold;
}

/* ------------------ Background Array ------------------------------- */
#nd div.background-array {
	position: absolute;
	top: 3em;
	width: 100%;
	max-width: 1440px;
	background-color: #333;
	display: -webkit-flex;
	display: flex;
	-webkit-flex-flow: row wrap;
	flex-flow: row wrap;
	-webkit-align-items: center;
	align-items: center;
}
/* ... */

